# iz-tree

./: .gitignore  CMakeLists.txt
plugin/: CMakeLists.txt  GenerateQmldirFile.cmake  QmlPluginDump.cmake  qml_src.qrc  qmldir.in
plugin/include/IzTreeView/: IzTreeView_Enums.h  QmlPlugin.h
plugin/include/IzTreeView/QML/: DefaultNodeDelegate.qml  IzTreeView.qml  LineComponent.qml  LineShapeComponent.qml  NoParentLineComponent.qml  QuickSettings.qml
plugin/private/: ConnectorsModel.cpp  ConnectorsModel.h  QmlPlugin.cpp  TreeViewController.cpp  TreeViewController.h  TreeVisibilityFilter.cpp  TreeVisibilityFilter.h
